# RecoBox

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: litepal.xml
app/src/main/cpp/: CMakeLists.txt  Mp3Encoder.cpp  Mp3Encoder.h  mp3_encoder.cpp  mp3_encoder.h  native-lib.cpp  real_time_audio_info.cpp  util.h
app/src/main/res/anim/: fade_in_short.xml  fade_out_short.xml
app/src/main/res/animator/: record_option_animator.xml
app/src/main/res/drawable/: bg_selector.xml  cloud_sync_pressed_shape.xml  cloud_sync_selector.xml  cloud_sync_unpressed_shape.xml  cursor_color.xml  et_bg.xml  ic_add.xml  ic_app_icon.xml  ic_bg_pressed.xml  ic_bg_unpressed.xml  ic_bluetooth.xml  ic_bottom_play.xml  ic_check.xml  ic_cloud_download.xml  ic_cloud_top.xml  ic_computer.xml  ic_delete_white.xml  ic_earpiece.xml  ic_earpiece_black.xml  ic_edit_square_enable.xml  ic_edit_square_white.xml  ic_empty_page.xml  ic_go_to.xml  ic_item1.xml  ic_item2.xml  ic_item3.xml  ic_item4.xml  ic_list.xml  ic_more.xml  ic_more_click.xml  ic_move_to_enable.xml  ic_new1.xml  ic_new2.xml  ic_pencil.xml  ic_play.xml  ic_qq.xml  ic_record.xml  ic_record_cancel.xml  ic_record_finish.xml  ic_record_stop.xml  (+26 more)
app/src/main/res/drawable-hdpi/: ic_delete_enable.xml  ic_delete_unenable.xml  ic_edit_square_unenable.xml  ic_move_to_unenable.xml  ic_share_enable.xml  ic_share_unenable.xml
app/src/main/res/drawable-xxhdpi/: ic_scissor_black.xml
app/src/main/res/layout/: activity_cloud.xml  activity_contact.xml  activity_more_settings.xml  activity_qqlogin.xml  activity_record.xml  activity_record_list.xml  activity_record_play.xml  activity_welcome.xml  activity_wizard.xml  clip_layout.xml  cloud_item_layout.xml  cloud_layout.xml  description_layout.xml  drawer_header.xml  drawer_item.xml  empty_bottom.xml  empty_page.xml  folder_item.xml  level_item.xml  popup_change_name.xml  popup_delete.xml  popup_loading.xml  popup_new.xml  popup_share.xml  record_item.xml  search_view.xml  star_folder_layout.xml  welcome_vp.xml  welcome_vp_with_btn.xml
app/src/main/res/menu/: menu.xml
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
librangeseekbar/: build.gradle
(+33 files in other folders)
